force-app/main/default/objects/ssot__Visitor__dlm/fields/ssot__AssigneeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssigneeId__c</fullName>
    <label>Assignee</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssigneeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>