force-app/main/default/objects/ssot__Visitor__dlm/fields/ssot__Visitor_VisitId_map_Visit_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__Visitor_VisitId_map_Visit_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visitor_VisitId_map_Visit_Id_N_1</label>
    <referenceTo>ssot__Visit__dlm</referenceTo>
    <relationshipLabel>Visitor_VisitId_map_Visit_Id_N_1</relationshipLabel>
    <relationshipName>Visitor_VisitId_map_Visit_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>